K8S/borrow-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: borrow-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: borrow
  template:
    metadata:
      labels:
        app: borrow
    spec:
      containers:
        - image: jp4861/borrow:2021-12-27-16-32-48
          name: borrow
          ports:
            - containerPort: 5556
              name: server
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health/live
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3



---

apiVersion: v1
kind: Service
metadata:
  name: borrow
spec:
  type: LoadBalancer
  ports:
    - port: 5556
      protocol: TCP
      targetPort: server
  selector:
    app: borrow
