K8S/catalog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: borrow-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: borrow
  template:
    metadata:
      labels:
        app: borrow
    spec:
      containers:
        - image: jp4861/borrow:2021-11-12-23-05-56
          name: recommendation
          ports:
            - containerPort: 5556
              name: server
              protocol: TCP


---

apiVersion: v1
kind: Service
metadata:
  name: borrow
spec:
  type: LoadBalancer
  ports:
    - port: 5556
      protocol: TCP
      targetPort: server
  selector:
    app: borrow
